<resources>
    <string name="app_name">රැKia</string>
    <string name="Log">Login</string>
    <string name="Reg">Register</string>
    <string name="RegPoster">Join our system Ad Poster!!!</string>
    <string name="FName">First Name</string>
    <string name="Lname">Last Name</string>
    <string name="Mail">Email</string>
    <string name="Phn">Phone</string>
    <string name="Uname">User email</string>
    <string name="Pwd">Password</string>
    <string name="Repwd">Retype Password</string>
    <string name="Sub">Submit</string>
    <string name="Reset">Reset</string>
    <string name="LOG">Welcome Ad poster</string>
    <string name="postAd">Post your Ad here!!!</string>
    <string name="Cname">Company Name</string>
    <string name="Pos">Position of job</string>
    <string name="Cmail">Contact Email</string>
    <string name="JobD">"Enter job description "</string>
    <string name="Ptype">Select duration ad should be available</string>
    <string name="M1">1 month costs 1$</string>
    <string name="M2">2 month costs 2$</string>
    <string name="M3">3 months costs 3$</string>
    <string name="Pay">Pay</string>
    <string name="Up">Update your Ad details or delete Ad</string>
    <string name="Up1">Update</string>
    <string name="Delete">Delete</string>
    <string name="WPost">Welcome Ad Poster</string>
    <string name="WNm">Ad Poster Name</string>
    <string name="Vac">Posted Vacancies will be displayed when button clicked</string>
    <string name="Int">Viewer interests will be diplayed on button click</string>
    <string name="AdAd">Add Ad</string>
    <string name="UpDe">Update/Delete Ad</string>
    <string name="DeProf">Delete Profile</string>
    <string name="Choose">Welcome, Choose how you want to login</string>
    <string name="LasAdmin">Login as Admin</string>
    <string name="LasAdP">Login as Ad Poster</string>
    <string name="LasAdV">Login as Ad Viewer</string>
    <string name="ChooseReg">Welcome, Choose how you want to register to our system</string>
    <string name="RasAdP">Register as Ad Poster</string>
    <string name="RasAdV">Register as Ad Viewer</string>
    <string name="Fpwd">Forgot Password, No Worries</string>
    <string name="Clk">Update Password</string>
    <string name="Fpass">Forgetting your password is okay, You are just one step from updating it to a new password</string>
    <string name="Nname">Enter User Email</string>
    <string name="Npwd">Enter new Password</string>
    <string name="Rnpwd">Re Enter new Password</string>
    <string name="Up2">Update Password</string>
    <string name="Wadmin">Welcome Admin!!!</string>
    <string name="Adname">Name of admin</string>
    <string name="Vfeed">Available feedbacks are :-</string>
    <string name="Vinq">View Inquiries</string>
    <string name="Ejob">Enter job ID</string>
    <string name="Dejob">Delete Job</string>
    <string name="Uppass">Update Password</string>



    <string name="title_activity_admin_login">Admin_login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="intt">If you\'re interested !!</string>
    <string name="infor">Enter your information here, and we\'ll give you our details so you can learn more about this position.</string>
    <string name="name">Name</string>
    <string name="hint1">user</string>
    <string name="jobid">Job ID</string>
    <string name="hint2">000000</string>
    <string name="email">E-mail address</string>
    <string name="hint3">user123@gmail.com</string>
    <string name="pn">Phone number</string>
    <string name="hint4">+94*********</string>
    <string name="btn1">Confirm</string>
    <string name="Wad">Welcome adviewer</string>
    <string name="add"><![CDATA[<Display ads>]]></string>
    <string name="addInt">Add interest</string>
    <string name="und">View Interest</string>
    <string name="deleteSE">Delete account</string>
    <string name="login">Login to the system</string>
    <string name="password">password</string>
    <string name="loginad">Login as admin</string>
    <string name="textName">editTextTextPersonName</string>
    <string name="p_hint">*********</string>
    <string name="pn_hint">+94*********</string>
    <string name="update">Confirm update</string>
    <string name="delete_ad">Delete ad</string>
    <string name="del">Delete ad</string>
    <string name="dis_del">Can you please share us what was not working? we are fixing bugs as soon as we spot them. If something slipped through our fingers we\'d be grateful to be aware of it and fix it.</string>
    <string name="explain1">Your explanation is entirely optional</string>
    <string name="confirm_del">Confirm deletion</string>


    <string name="fpwd">Welcome back  you\'ve been missed !</string>
    <string name="fcpwd">"Change your password "</string>
    <string name="fhello">Hello Again !</string>
    <string name="fbtn">SUBMIT</string>
    <string name="femail">Email</string>
    <string name="fnpwd">New Password</string>
    <string name="frnpwd">Re enter New password</string>
    <string name="Psumma">SUMMARY</string>
    <string name="payment">Payment Method</string>
    <string name="ptot">Total Amount</string>
    <string name="pcname">Card Name</string>
    <string name="phname">Card Holder Name</string>
    <string name="pcnumber">Card Number</string>
    <string name="pcexpiry">Expiry</string>
    <string name="pcvc">CVC</string>
    <string name="pabtnpay">PAY</string>
    <string name="rs">RS 00.00</string>
    <string name="A1">card Name</string>
    <string name="A2">Name</string>
    <string name="H1">***</string>
    <string name="H2">MM/DD</string>
    <string name="H3">****</string>
    <string name="H4">RS  00.00</string>
    <string name="A3">Ad Value :-</string>
    <string name="A4">Add Card Method</string>
    <string name="A5">Email</string>
    <string name="H5">****@gmail.com</string>
    <string name="A6">Pay Now</string>
    <string name="A7">Credit Card</string>
    <string name="A8">Debit Card</string>
    <string name="A9">Add Payment Method</string>
    <string name="A10">"WELCOME "</string>
    <string name="A11">Ad Viewer</string>

    <string name="H7">Enter your email</string>
    <string name="A12">Email</string>
    <string name="A13">Password</string>
    <string name="H8">********</string>
    <string name="A14">LOGIN</string>
    <string name="A15">Forget Password?</string>

    <string name="UPADV">Update your details</string>
    <string name="UPDBt">Update</string>
    <string name="LGout">Logout</string>
    <string name="ADVPWUP">Update Password</string>

    <string name="A16">"Forgot "</string>
    <string name="A17">Password ?</string>
    <string name="A18">Don\'t worry ! it happens. Please enter the address and New password associate with your Account.</string>
    <string name="H9">Email  ID</string>
    <string name="H10">Enter Password</string>
    <string name="H11">Enter New Password</string>
    <string name="B1">SUBMIT</string>
    <string name="A19">Hello Again !</string>
    <string name="A20">Welcome back  you\'ve been missed !</string>
    <string name="H13">Email</string>
    <string name="H14">New Password</string>
    <string name="H15">Re enter New password</string>
    <string name="A21">"Change your password "</string>
    <string name="A22">SUBMIT</string>
    <string name="holder_name">Holder Name</string>
    <string name="type">Type</string>
    <string name="ViewInq">View Inquiries</string>
    <string name="uppass">Update Password</string>


    <string name="Inquiries">Inquiries</string>
    <string name="ViewInquiries">View All Inquiries</string>
    <string name="HelpDesk">Help Desk</string>
    <string name="Feedbacks">Feedback</string>
    <string name="Email">Enter Email</string>
    <string name="Phone">Enter Phone</string>
    <string name="Massage">Massage</string>
    <string name="Submit">Submit</string>
    <string name="Update">Update</string>
    <string name="Inquiry1">Do you want to update your inquiry?</string>
    <string name="Inquiry2">If you have any inquiries send us......</string>
    <string name="Type1">How satisfied are you with our Application</string>
    <string name="Type2">What do you think about the application interface?</string>
    <string name="Radiobtn1">Good</string>
    <string name="Radiobtn2">Poor</string>
    <string name="Radionbtn3">Average</string>
    <string name="Type3">How did you hear about us?</string>
    <string name="Radiobtn4">FaceBook</string>
    <string name="Radiobtn5">Instagram</string>
    <string name="Radionbtn6">Google</string>
    <string name="Radionbtn7">Other</string>
    <string name="Type4">Welcom to රැkia!!!!!</string>
    <string name="Register">Register</string>
    <string name="fName">Full Name</string>
    <string name="pwd1">Enter Password</string>
    <string name="pwd2">Re-enter Password</string>
    <string name="view">All Inquiries of ad viewers and add posters</string>
    <string name="ADAI">Add Inquiry</string>
    <string name="btn6">Done</string>
    <string name="Abill">Bill Summary</string>

</resources>