<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment_portal"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="252dp">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="390dp"
        android:layout_height="275dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-50dp"
        android:rotation="-38"
        android:rotationX="50"
        android:rotationY="13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/payment" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="160dp"
        android:layout_height="44dp"
        android:layout_marginStart="-380dp"
        android:layout_marginTop="-45dp"
        android:text="@string/ptot"
        android:textColor="#083568"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal3" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/pcvc"
        android:textAlignment="center"
        android:textColor="#083568"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber3"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:text="@string/pcexpiry"
        android:textAlignment="center"
        android:textColor="#083568"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="43dp"
        android:text="@string/pcnumber"
        android:textColor="#083568"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="164dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:text="@string/payment"
        android:textColor="#083568"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal3" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="166dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:text="@string/pcname"
        android:textColor="#083568"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="192dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/phname"
        android:textColor="#083568"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/editTextNumberDecimal3"
        android:layout_width="240dp"
        android:layout_height="67dp"
        android:layout_marginStart="-230dp"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:hint="@string/rs"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="61dp"
        android:layout_height="44dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="41dp"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal3"
        app:srcCompat="@drawable/visa__1_" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="62dp"
        android:layout_height="45dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="41dp"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal3"
        app:srcCompat="@drawable/icons8_mastercard_logo_96" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="41dp"
        app:layout_constraintStart_toEndOf="@+id/imageView18"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal3"
        app:srcCompat="@drawable/paypal" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="221dp"
        android:layout_height="60dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/A1"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/imageView18"
        tools:text="@string/A1" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="385dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/holder_name"
        android:inputType="textPersonName"
        android:text="@string/A2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="374dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/H1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="153dp"
        android:layout_height="66dp"
        android:layout_marginStart="-140dp"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:hint="@string/H2"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="137dp"
        android:layout_height="67dp"
        android:layout_marginStart="-130dp"
        android:layout_marginTop="198dp"
        android:ems="10"
        android:hint="@string/H3"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="194dp"
        android:layout_height="68dp"
        android:backgroundTint="#7681AE"
        android:text="@string/pabtnpay"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber4"
        tools:layout_editor_absoluteY="180dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>