<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Feedback">

        <Button
            android:id="@+id/btn1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="802dp"
            android:backgroundTint="@color/btn"
            android:text="@string/Submit"
            android:textColor="@color/txt"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtView1"
            android:layout_width="402dp"
            android:layout_height="69dp"
            android:layout_marginTop="16dp"
            android:text="@string/HelpDesk"
            android:textAlignment="center"
            android:textColor="@color/txt"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="157dp"
            android:text="@string/Type1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="272dp"
            android:text="@string/Type2"
            android:textAlignment="textStart"
            android:textColor="#0C0202"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="523dp"
            android:text="@string/Type3"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="199dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/Feedbacks"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rdgrp1"
            android:layout_width="388dp"
            android:layout_height="168dp"
            android:layout_marginTop="332dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:text="@string/Radiobtn1"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:text="@string/Radiobtn2"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:text="@string/Radionbtn3"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rdgrp2"
            android:layout_width="416dp"
            android:layout_height="212dp"
            android:layout_marginTop="566dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:text="@string/Radiobtn5"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:text="@string/Radiobtn4"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:text="@string/Radionbtn6"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:text="@string/Radionbtn7"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>