<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Add_interest">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="328dp"
        android:layout_height="71dp"
        android:layout_marginTop="16dp"
        android:text="@string/intt"
        android:textColor="@color/text"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="364dp"
        android:layout_height="103dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/infor"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/e_hint"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/hint3"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/Hint"
        app:layout_constraintBottom_toTopOf="@+id/phone_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/ph_hint"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:width="250dp"
        android:ems="10"
        android:hint="@string/hint4"
        android:inputType="phone"
        android:textColorHint="@color/Hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_n" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/j_hint" />

    <TextView
        android:id="@+id/phone_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/pn"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ph_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_hint"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/BTN"
        android:text="@string/btn1"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ph_hint"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/user"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="textPersonName"
        android:textColor="@color/Hint"
        android:textColorHint="@color/Hint"
        app:layout_constraintBottom_toTopOf="@+id/job_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_user"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/job_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:text="@string/jobid"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <EditText
        android:id="@+id/j_hint"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/hint2"
        android:inputType="textPersonName"
        android:textColor="@color/Hint"
        android:textColorHint="@color/Hint"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job_id"
        app:layout_constraintVertical_bias="0.094" />

</androidx.constraintlayout.widget.ConstraintLayout>