<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:contextClickable="true"
    tools:context=".Delete1">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="373dp"
        android:layout_height="178dp"
        android:text="@string/dis_del"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/explain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/del_text"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/del_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/del"
        android:textColor="@color/text"
        android:textIsSelectable="false"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/explain"
        android:layout_width="362dp"
        android:layout_height="203dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/explain1"
        android:textAlignment="center"
        android:textColor="#635B5B"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/del_con_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/del_con_btn"
        android:layout_width="253dp"
        android:layout_height="77dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/BTN"
        android:text="@string/confirm_del"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explain" />
</androidx.constraintlayout.widget.ConstraintLayout>